--- a/src/index.css
+++ b/src/index.css
@@ -1,22 +1,17 @@
+@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100;200;300;400;500;600;700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-
 }
 
 body {
-  margin: 0;
   font-family: 'Outfit', 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
 }
 
 p {
@@ -27,7 +22,7 @@ h1 {
   font-size: 6rem;
 }
 
-.app{
+.app {
   width: 100%;
   height: 100vh;
   position: relative;
@@ -35,7 +30,7 @@ h1 {
   color: #fff;
 }
 
-.app:before{
+.app:before {
   content: '';
   background: url('./assets/sunset.jpg') no-repeat center center/cover;
   position: absolute;
@@ -52,11 +47,11 @@ h1 {
 }
 
 .app input {
-  padding: 0.7rem 1.5rem;
+  padding: .7rem 1.5rem;
   font-size: 1.2rem;
-  border-radius: 15px;
-  border: 1px solid rgba(255, 255, 255, 0.8);
-  background: rgba(255, 255, 255, 0.1);
+  border-radius: 25px;
+  border: 1px solid rgba(255,255,255, 0.8);
+  background: rgba(255,255,255, 0.1);
   color: #f8f8f8;
 }
 
@@ -84,7 +79,7 @@ h1 {
 .app .description {
   position: relative;
   right: -90%;
-  transform-orign: 0 0;
+  transform-origin: 0 0;
   transform: rotate(269deg);
 }
 
@@ -96,5 +91,16 @@ h1 {
   margin: 1rem auto;
   padding: 1rem;
   border-radius: 12px;
-  background-color: rgba(255, 255, 255, 0.2);
+  background-color: rgba(255,255,255, 0.2);
 }
+
+.bold {
+  font-weight: 700;
+}
+
+
+
+
+
+
+
